# vl6180x

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: vl6180x-ci.yml
examples/: oneshot.rs
src/: config.rs  device_status.rs  error.rs  i2c_interface.rs  init.rs  lib.rs  mode.rs  read_measurements.rs  register.rs  start_stop_measurements.rs
src/config/: config_tests.rs
src/mode/: continuous.rs  dynamic.rs  mod.rs  powered_off.rs  ready.rs
src/register/: register_tests.rs
tools/: bmp.gdb  bmp.sh
