[package]
name = "vl6180x"
version = "0.1.4"
description = "A rust driver for the VL6180X (Time-of-Flight I2C laser-ranging module)"
authors = ["Luca Zulian <lucagiuggia@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["hal", "IO",  "embedded-hal-driver", "vl6180x", "tof"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucazulian/vl6180x"
edition = "2018"
exclude = [ "doc", "*.jpg", "*.png", "*.bmp" ]

[dependencies]
embedded-hal = {version = "0.2.7", features = ["unproven"]}
int-enum = {version = "0.4.0", default-features = false}

[profile.release]
codegen-units = 1
debug = true
lto = true