[package]
name = "vl6180x"
version = "0.2.0"
description = "A rust driver for the VL6180X (Time-of-Flight I2C laser-ranging module)"
authors = [
    "Luca Zulian <lucagiuggia@gmail.com>",
    "Shao Yuan <flossy_lineage.0b@icloud.com>",
]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["hal", "IO", "embedded-hal-driver", "vl6180x", "tof"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucazulian/vl6180x"
edition = "2018"
exclude = ["doc", "*.jpg", "*.png", "*.bmp"]

[dependencies]
embedded-hal = "1.0.0"
int-enum = { version = "1.1.2", default-features = false }

[profile.release]
codegen-units = 1
debug = true
lto = true
